--- a/html/ipad.html
+++ b/html/ipad.html
@@ -124,7 +124,9 @@
 			</div>
 		</div>
 		<div class="grid_5" id="middleContent"></div>
-		<div class="" id="rightContent" style="overflow: scroll; height: 35em;margin-top:3%; position: fixed ;top: 7%;right: 0px;"></div>
+		<div class="" id="rightContent" style="overflow: scroll; height: 35em;margin-top:3%; position: fixed ;top: 7%;right: 0px;">
+			
+		</div>
 	</div>
 
 </body>
