修改配置信息

--- a/html/login.html
+++ b/html/login.html
@@ -137,7 +137,7 @@
 
 								}else{
 									$.hori.hideLoading();
-									alert(json.msg+"22");
+									alert(json.msg);
 								}
 
 						},
