+ 添加安全生产标题

--- a/html/watchlist.html
+++ b/html/watchlist.html
@@ -40,7 +40,9 @@
     </style>
 
     <script>
-
+    $(document).ready(function() {
+        $.hori.setHeaderTitle("安全生产");
+    });
 
         function doSearch() {
 			$.hori.showLoading();
