--- a/html/listDetails.html
+++ b/html/listDetails.html
@@ -19,6 +19,11 @@
     <script src="../lib/app/watchlist/app.js"></script>
     <script src="../lib/template/template.js"></script>
 </head>
+<script type="text/javascript">
+	$(document).ready(function() {
+		$.hori.setHeaderTitle("安全生产详情");
+	});
+</script>
 <body>
 
 <div>
