集团新闻、政策法规中的图标太小、已改为合适 为安全生产中的搜索加上关键词不为空的条件

--- a/html/jtxwz.html
+++ b/html/jtxwz.html
@@ -19,6 +19,12 @@
 <script src="../config/web/config.js"></script>
 
 </head>
+<style>
+	#imgSearch,#imgToDo {
+	width: 80px;
+	height : 80px
+}
+</style>
 <script type="text/javascript">
 	$(document).ready(function() {
 	    try {
@@ -49,7 +55,7 @@
 			<div class="ui-grid-b" id="divOne">
 				<div class="ui-block-b">
 					<a href="javascript:void(0);" onclick="loadTpxwList()"> <img
-						id="imgToDo" src="../assets/home/tpxw.png" class="module-icon" />
+						id="imgToDo" src="../assets/home/tpxw.png" class="module-icon" width="80px" height="80px"/>
 					</a> <br />
 					<span style="color: #434343;"><strong>图片新闻</strong></span>
 				</div>
