--- a/html/zcfgz.html
+++ b/html/zcfgz.html
@@ -33,6 +33,14 @@
 	}
 </script>
 </head>
+
+<style>
+#imgSearch, #imgToDo {
+	width: 80px;
+	height: 80px
+}
+</style>
+
 <body>
 	<div data-role="page" id="home">
 		<div data-role="content" align="center">
