* 调整首页显示

--- a/html/bi.html
+++ b/html/bi.html
@@ -65,7 +65,7 @@
 			'target' : 'bi/srlr.html',
 			'img' : '../assets/home/srlr.png'
 		} ];
-		var jsondata = localStorage.getItem("json");
+		var jsondata = localStorage.getItem("bi_modules");
 		var json = JSON.parse(jsondata);
 		var target=[];
 		for (var i = 0; i < json.length; i++) {
