--- a/html/home2.html
+++ b/html/home2.html
@@ -56,7 +56,7 @@
 <body>
 	<div data-role="content" align="center">
 		<div class="ui-grid-b" id="divOne">
-			<div data-bind="foreach: list" style="width: 100%;">
+			<div id="homeModules" data-bind="foreach: list" style="width: 100%;">
 				<div class="ui-block-b divxs">
 					<a href="javascript:void(0);" data-bind="attr:{'onclick':target}">
 						<img class="imgToDo module-icon  " data-bind="attr:{'src':img}" />
