--- a/html/queryList.html
+++ b/html/queryList.html
@@ -197,7 +197,7 @@
 		$(document).ready(function(){
 			var hori = $.hori;
 			/*设置标题*/
-			hori.setHeaderTitle("公文查阅");
+			hori.setHeaderTitle("集团文件系统公文查阅");
 			//获取会签tab
 			getsignpath();
 			loaded();
