--- a/html/task.html
+++ b/html/task.html
@@ -28,14 +28,14 @@
 <body>
 	<div id="list" data-role="page" class="type-home">
 		<div data-role="content" align="center">
-			<div  id="divDataLoading">
+			<div  id="divDataLoading" style="width:90%;">
 				<ul  data-role="listview" data-inset="true">
 					<li class="ui-li-static ui-body-inherit ui-first-child ui-last-child"><h3>数据加载中……</h3></li>
 				</ul>				
 			</div>
 			<div id="taskList">
-				<div id="wrapper">
-					<div id="scroller">
+				<div id="wrapper" style="display: none;">
+					<div id="scroller" >
 						<div>
 						<br/>
 							<ul id="listcontent" data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow" style="margin-top: 30px;">
