图片新闻图片不显示

--- a/html/forgetPwd.html
+++ b/html/forgetPwd.html
@@ -196,18 +196,12 @@ a {
 						</table>
 					</li>
 				</ul>
-			</form>
-			<div class="ui-grid-d">
-				<div class="ui-block-a"></div>
-				<div class="ui-block-b"></div>
-				<div class="ui-block-c" style="width: 200px;">
+			</form><br/><br/>
+			<div style="max-width: 250px;">
 					<a href="javascript:void(0)" onclick="doSearch()" data-theme="f"
 						data-role="button" data-icon="false">重置密码</a>
-				</div>
-				<div class="ui-block-d"></div>
-				<div class="ui-block-e"></div>
 			</div>
-
+			
 			<div
 				style="max-width: 400px; background-color: #ADADAD; display: none;"
 				border="1px">
