--- a/html/listDetailsForAQSC.html
+++ b/html/listDetailsForAQSC.html
@@ -74,18 +74,62 @@
 						<li data-role="list-divider" role="heading"
 							class="ui-li ui-li-divider ui-bar-b ui-first-child">值班信息</li>
 						<li id="div_DTblHtml"
-							class="ui-li ui-li-static ui-btn-up-d ui-last-child">无数据</li>
+							class="ui-li ui-li-static ui-btn-up-d ui-last-child">
+
+
+
+
+							<ul data-role="listview" data-inset="true" data-theme="d"
+								class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
+
+								<li class="ui-li ui-li-static ui-btn-up-d ui-first-child">值班时间
+									：2014-01-05</li>
+
+								<li class="ui-li ui-li-static ui-btn-up-d">值班领导 ：王家强</li>
+
+								<li class="ui-li ui-li-static ui-btn-up-d">联系电话
+									：13336009055</li>
+
+								<li class="ui-li ui-li-static ui-btn-up-d">值班员 ：王家强</li>
+
+								<li class="ui-li ui-li-static ui-btn-up-d ui-last-child">联系电话
+									：13336009055</li>
+
+							</ul>
+
+							<ul data-role="listview" data-inset="true" data-theme="d"
+								class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
+
+								<li class="ui-li ui-li-static ui-btn-up-d ui-first-child">值班时间
+									：2014-01-06</li>
+
+								<li class="ui-li ui-li-static ui-btn-up-d">值班领导 ：朱建敏</li>
+
+								<li class="ui-li ui-li-static ui-btn-up-d">联系电话
+									：13105791599</li>
+
+								<li class="ui-li ui-li-static ui-btn-up-d">值班员 ：朱建敏</li>
+
+								<li class="ui-li ui-li-static ui-btn-up-d ui-last-child">联系电话
+									：13105791599</li>
+
+							</ul>
+
+
+						</li>
 					</ul>
 					<ul data-role="listview" data-inset="true" data-theme="d"
 						class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
 						<li data-role="list-divider" role="heading"
 							class="ui-li ui-li-divider ui-bar-b ui-first-child">节假日期间生产安排情况</li>
-						<li class="ui-li ui-li-static ui-btn-up-d ui-last-child">全员放假</li>
+						<li class="ui-li ui-li-static ui-btn-up-d ui-last-child">无</li>
 					</ul>
 					<ul data-role="listview" data-inset="true" data-theme="d"
 						class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
-						<li data-role="list-divider">安全保证措施</li>
-						<li class="ui-li ui-li-static ui-btn-up-d ui-last-child">节假日值班领导带队检查；严格按照《中国邮电器材东北公司安全生产事故综合应急预案》、《中国邮电器材东北公司安全生产标准化创建总体方案》、《中国邮电器材东北公司东北公司警卫值班规定》等制度规定执行。</li>
+						<li data-role="list-divider" role="heading"
+							class="ui-li ui-li-divider ui-bar-b ui-first-child">安全保证措施</li>
+						<li class="ui-li ui-li-static ui-btn-up-d ui-last-child">
+							节日期间，全体员工务必注意个人人身安全，为确保通信畅通，要求公司员工必须24小时保持开机状态，值班人员要坚守岗位，遇到紧急、重大情况必须及时请示报告。各部门切记要关闭空调、电源、门窗，做好办公场所的安全防范工作。</li>
 					</ul>
 				</div>
 			</div>
