+ 移动办公权限及电子期刊服务到viewer配置中

--- a/html/periodical.html
+++ b/html/periodical.html
@@ -29,7 +29,7 @@
 				$.hori.setHeaderTitle("电子期刊");
 				$.hori.showLoading();
 				var Url = $.hori.getconfig().appServerHost
-						+ "/biz/mobile/periodical.jsp";
+						+ "view/periodical/list";
 				$.hori.ajax({
 					"type" : "get",
 					"url" : Url,
