安全生产值班表界面调整

--- a/html/watchlist.html
+++ b/html/watchlist.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>安全生产值班表详情</title>
+    <title>安全生产值班表</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0"/>
     <link rel="stylesheet" href="../lib/jquery-mobile/jquery.mobile-latest/jquery.mobile.min.css"/>
@@ -126,8 +126,97 @@
         </table>
     </div>
 
-    <div data-role="content" id="listContent">
-
+    <div data-role="content" id="listContent" style="text-align: center;">
+    	<table border="1" bordercolor="white" align="center" style="width:100%;font-size: 100%;">
+    	
+    	  <tr bordercolor="white">
+    	  <td colspan="3" bordercolor="white">集团公司安全生产委员会</td>
+    	  </tr>
+    	  <tr>
+    	  <td width="25%">主任:</td>
+    	  <td width="25%">李谠</td>
+    	  <td>集团公司总经理</td>
+    	  </tr>
+    	  <tr>
+    	  <td>副主任：</td>
+    	  <td>刘大山</td>
+    	  <td>集团公司党组成员、副总经理</td>
+    	  </tr>
+    	  <tr>
+    	  <td></td>
+    	  <td>李克全</td>
+    	  <td>总经理助理</td>
+    	  </tr>
+    	  <tr>
+    	  <td>委　员：</td>
+    	  <td>杨景耀</td>
+    	  <td>办公厅主任</td>
+    	  </tr>
+    	  <tr>
+    	  <td></td>
+    	  <td>黄继刚</td>
+    	  <td>发展总部副总经理</td>
+    	  </tr>
+    	  <tr>
+    	  <td></td>
+    	  <td>詹　荣</td>
+    	  <td>运管总部总经理</td>
+    	  </tr>
+    	  <tr>
+    	  <td></td>
+    	  <td>郑东生</td>
+    	  <td>运管总部副总经理</td>
+    	  </tr>
+    	  <tr>
+    	  <td> </td>
+    	  <td>徐　明</td>
+    	  <td>财务总部总经理</td>
+    	  </tr>
+    	  <tr>
+    	  <td></td>
+    	  <td>钱新荣</td>
+    	  <td>人事总部副总经理</td>
+    	  </tr>
+    	  <tr>
+    	  <td></td>
+    	  <td>黄梅艳</td>
+    	  <td>风控信息总部总经理</td>
+    	  </tr>
+    	  <tr>
+    	  <td></td>
+    	  <td>欧阳敬芝</td>
+    	  <td>党群部副主任（工会副主席）</td>
+    	  </tr>
+    	  <tr>
+    	  <td></td>
+    	  <td>王景林</td>
+    	  <td>总务部、物业公司总经理</td>
+    	  </tr>
+    	  <tr>
+    	  <td colspan="3">集团公司安委会联系方式 </td>
+    	  </tr>
+    	  <tr>
+    	  <td>电话： </td>
+    	  <td>郑东生</td>
+    	  <td>010 - 63349976</td>
+    	  </tr>
+    	  <tr>
+    	  <td></td>
+    	  <td>刘元才</td>
+    	  <td>010 - 63349557</td>
+    	  </tr>
+    	  <tr>
+    	  <td></td>
+    	  <td>杨文红</td>
+    	  <td>010 - 63349552</td>
+    	  </tr>
+    	  <tr>
+    	  <td></td>
+    	  <td>沈德继</td>
+    	  <td>010 - 63349562</td>
+    	  </tr>
+    	  
+    	</table>
     </div>
 
     <script id="watchlist" type="text/html">
