--- a/html/login.html
+++ b/html/login.html
@@ -57,6 +57,8 @@ a {
 				});
 				//重新获取验证码
 				getCaptcha();
+				//清除输入登录信息
+				clearLoginInfo();
 			});
 
 		} catch (e) {
@@ -66,6 +68,11 @@ a {
 		loginout();
 	});
 
+	//清除输入登录信息
+	function clearLoginInfo(){
+		$("#password").val("");
+        $("#captcha").val("");
+	}
 	function getCaptcha() {
 		captcha_id = $.uuid();
 		$("#captcha_id").val(captcha_id); //设置验证码id
