安全生产值班表样式调整 图片新闻bug修改

--- a/html/watchlist.html
+++ b/html/watchlist.html
@@ -127,10 +127,9 @@
     </div>
 
     <div data-role="content" id="listContent" style="text-align: center;">
-    	<table border="1" bordercolor="white" align="center" style="width:100%;font-size: 100%;">
-    	
-    	  <tr bordercolor="white">
-    	  <td colspan="3" bordercolor="white">集团公司安全生产委员会</td>
+    	<table  cellspacing="0.1" align="center" style="width:100%;font-size: 100%;background-color: white;border:thin solid blue">    	
+    	  <tr bordercolor="white" >
+    	  <td colspan="3" >集团公司安全生产委员会</td>
     	  </tr>
     	  <tr>
     	  <td width="25%">主任:</td>
