--- a/html/forgetPwd.html
+++ b/html/forgetPwd.html
@@ -37,7 +37,7 @@ a {
 		var username = $.trim($("#user_name").val());
 		var number = $("#id_number").val();
 		if (username == "") {
-			alert("请输入账号!");
+			alert("请输入用户名!");
 			return;
 		}
 		if (un_name == "") {
@@ -52,15 +52,12 @@ a {
 		$.hori.ajax({
 			"type" : "get",
 			"url" : url,
-			"headers":{
-				"Access-Control-Allow-Origin": true
-			},
 			"data" : $('#forgetPwdForm').serialize(),
 			"success" : function(res) {
-			    alert(res);
+			    //alert(res);
 			},
 			"error" : function(res) {
-				alert(res + "222");
+				alert(res);
 				$.hori.hideLoading();
 			}
 		})
@@ -94,7 +91,7 @@ a {
 			"url" : url,
 			"data" :  $("#forgetPwdForm").serialize(),
 			"success" : function(res) {
-				alert(res);
+				//alert(res);
 			},
 			"error" : function(res) {
 				alert(res + "222");
@@ -191,7 +188,7 @@ a {
 								<td><input type="text" name="imageCode" id="imageCode"
 									style="width: 80px;" /></td>
 								<td><a data-role="button" href="javascript:void(0)"
-									data-theme="f" data-mini="true" onclick="getCaptcha();">获取验证码</a>
+									data-theme="f" data-mini="true" onclick="doSearch();">获取验证码</a>
 								</td>
 							</tr>
 						</table>
