部门反馈选择意见 新闻图片居中

--- a/html/bi.html
+++ b/html/bi.html
@@ -99,10 +99,37 @@
 	}
 </script>
 <style>
-.divxs {
-    width: 33.333%;
-    margin-top: 15px
+@media  only screen and (min-width: 1070px) and (max-width: 1242px) {
+  .imgToDo {
+    width:12em;
+	height: 12em;
+  }
+  .divxs {
+		width: 33.333%;
+		margin-top: 500px
+	}
+} 
+@media  screen and (min-width: 400px) and (max-width: 800px) {
+	.imgToDo {
+		width: 5.5em;
+		height:5.5em;
+	}
+	.divxs {
+		width: 33.333%;
+		margin-top: 20px
+	}
 }
+
+@media screen and (min-width: 310px) and (max-width: 330px) {
+	.imgToDo {
+		width: 3.6em;
+		height:3.6em;
+	}
+	.divxs {
+		width: 33.333%;
+		margin-top: 20px
+	}
+}  
 .ui-content{padding:5px;}
 a {
     text-decoration: none;
@@ -120,7 +147,7 @@ a {
 		<div data-bind="foreach: list" style="width:100%;">
 			<div class="ui-block-b divxs">
 				<a  data-bind="click:loadBi" > <img
-					id="imgToDo" data-bind="attr:{'src':img}" class="module-icon"/>
+					id="imgToDo" class="imgToDo" data-bind="attr:{'src':img}" class="module-icon"/>
 				</a> <br /> 
 				<span style="color: #434343;" ><strong data-bind="text:title"></strong></span>
 			</div>
