--- a/html/home2.html
+++ b/html/home2.html
@@ -18,14 +18,15 @@
 <script src="../lib/app/home/app.js"></script>
 <script src="../config/web/config.js"></script>
 <style>
-.divxs {
+/*.divxs {
 	width: 33.333%;
 	margin-top: 15px
-}
+}*/
 .ui-content{padding:5px;}
-/*  @media  only screen and (min-width: 1070px) and (max-width: 1242px) {
+@media  only screen and (min-width: 1070px) and (max-width: 1242px) {
   .imgToDo {
-    width:10em;
+    width:12em;
+	height: 12em;
   }
   .divxs {
 		width: 33.333%;
@@ -34,7 +35,8 @@
 } 
 @media  screen and (min-width: 400px) and (max-width: 800px) {
 	.imgToDo {
-		width: 4.5em;
+		width: 5.5em;
+		height:5.5em;
 	}
 	.divxs {
 		width: 33.333%;
@@ -45,12 +47,13 @@
 @media screen and (min-width: 310px) and (max-width: 330px) {
 	.imgToDo {
 		width: 3.6em;
+		height:3.6em;
 	}
 	.divxs {
 		width: 33.333%;
 		margin-top: 20px
 	}
-}  */
+}  
 </style>
 </head>
 <body>
